# xiao_nrf52840_sense_peripheral_nus

./: CMakeLists.txt  README.md  app.overlay  prj.conf  xiao_nrf52840_sense_peripheral_nus.code-workspace
src/: main.c
src/bsp/: bsp.c  bsp.h  bsp_ble.c  bsp_msg_rcv_task.c  bsp_periodic_task.c
src/bsp/driver/: bsp_flash_nvs.c  bsp_gpio.c  bsp_led_key.c  bsp_pwm_buzzer.c
src/bsp/sensors/: bsp_lsm6ds3tr.c  bsp_mic_msm261d.c  bsp_rtc_pcf8563t.c
src/cli/: cli.c  cli.h  cli_command.c  cli_command.h
